--- a/app.json
+++ b/app.json
@@ -15,8 +15,8 @@
       "index",
       "inline"
     ],
-    "website": "https://github.com/VJBots/VJ-FILTER-BOT",
-    "repository": "https://github.com/VJBots/VJ-FILTER-BOT",
+    "website": "https://t.me/botadmin44",
+    "repository": "https://t.me/botadmin44",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
